[package]
name = "nimbus-sdk-core"
version = "0.1.0"
edition = "2021"
description = "Nimbus Rust SDK core runtime"
license = "Apache-2.0"

[dependencies]
async-trait = { workspace = true }
http = { version = "1" }
once_cell = { version = "1" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nimbus-sdk-compute = { path = "nimbus-sdk-compute" }
nimbus-sdk-iam = { path = "nimbus-sdk-iam" }
serde_json = { workspace = true }
tokio = { workspace = true }
