[package]
name = "nimbus-sdk-core"
version = "0.1.0"
edition = "2021"
description = "Nimbus Rust SDK core runtime"
license = "Apache-2.0"

[features]
default = ["env-provider"]
env-provider = []

[dependencies]
async-trait = { workspace = true }
base64 = { version = "0.22" }
chrono = { workspace = true }
hex = { version = "0.4" }
hmac = { version = "0.12" }
http = { version = "1" }
once_cell = { version = "1" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nimbus-sdk-compute = { path = "nimbus-sdk-compute" }
nimbus-sdk-iam = { path = "nimbus-sdk-iam" }
serde_json = { workspace = true }
tokio = { workspace = true }
