[package]
name = "nimbus-sdk-dam"
version = "0.1.0"
edition = "2021"
description = "Nimbus dam Rust SDK"
license = "Apache-2.0"

[dependencies]
nimbus-sdk-core = { path = ".." }
serde = { workspace = true }
serde_json = { workspace = true }

bytes = { version = "1" }
hex = { version = "0.4" }
reqwest = { workspace = true }
sha2 = { version = "0.10" }
